--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 </head>
 <body>
   <h1>Symbolic Account Probe ⚡</h1>
+<script>
+  function runTransfer() {
+    console.log("Transfer initiated…");
+    // You can insert your symbolic hash logic here
+    alert("Transfer logic is firing correctly!");
+  }
+</script>
   <button onclick="runTransfer()">Run Transfer Check</button>
 
   <div id="log">Initializing symbolic console...</div>
